<resources>
    <!-- General Strings -->
    <string name="app_name">ProjectOne</string>
    <string name="action_settings">Settings</string>

    <!-- EventScreen Strings -->

    <string name="day_of_week_one">Mon</string>
    <string name="day_of_week_two">Tues</string>
    <string name="day_of_week_three">Wed</string>
    <string name="day_of_week_four">Thurs</string>
    <string name="day_of_week_five">Fri</string>
    <string name="day_of_week_six">Sat</string>
    <string name="day_of_week_seven">Sun</string>

    <string name="date_one">28</string>
    <string name="date_two">29</string>
    <string name="date_three">30</string>
    <string name="date_four">1</string>
    <string name="date_five">2</string>
    <string name="date_six">3</string>
    <string name="date_seven">4</string>


    <!-- Event Strings -->
        <!-- event 1 -->
        <string name="e_1_title">SUMMERMUSIC PLAYS "IN C"</string>
        <string name="e_1_day">TUE</string>
        <string name="e_1_month">Sept</string>
        <string name="e_1_date">29</string>
        <string name="e_1_time">7:30 PM</string>
        <string name="e_1_venue">KUM &amp; GO\nTHEATER</string>
        <string name="e_1_category">Music</string>
        <string name="e_1_description">SOME REALLY GOOD DESCRIPTIONSOME REALLY GOOD DESCRIPTIONSOME REALLY GOOD DESCRIPTIONSOME REALLY GOOD DESCRIPTIONSOME REALLY GOOD DESCRIPTION</string>
        <string name="e_1_more_link">http://desmoinessocialclub.org/events/summermusic-plays-in-c/</string>
        <string name="e_1_ticket">AT THE DOOR</string>
        <string name="e_1_price">$10</string>
        <string name="e_1_age"></string>


        <!-- event 2 -->
        <string name="e_2_title">TEAM TRIVIA</string>
        <string name="e_2_day">TUE</string>
        <string name="e_2_month">Sept</string>
        <string name="e_2_date">29</string>
        <string name="e_2_time">7:30 PM</string>
        <string name="e_2_venue">THE\nBASEMENT</string>
        <string name="e_2_category">Social</string>
        <string name="e_2_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_2_more_link">http://desmoinessocialclub.org/events/team-trivia-2015-09-29/</string>
        <string name="e_2_ticket"></string>
        <string name="e_2_price">FREE</string>
        <string name="e_2_age"></string>
        <!-- event 3 -->
        <string name="e_3_title">MORNING CIRCUS</string>
        <string name="e_3_day">WED</string>
        <string name="e_3_month">Sept</string>
        <string name="e_3_date">30</string>
        <string name="e_3_time">7:00 PM</string>
        <string name="e_3_venue">HANDBALL\nCOURT</string>
        <string name="e_3_category">Circus</string>
        <string name="e_3_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_3_more_link">http://desmoinessocialclub.org/events/morning-circus-strength-and-flexibility-2015-09-30/</string>
        <string name="e_3_ticket">https://59759.blackbaudhosting.com/59759/Morning-Circus-Strength-and-Flexibility</string>
        <string name="e_3_price">$50/6 WEEK SESSION</string>
        <string name="e_3_age"></string>

        <!-- event 4 -->
        <string name="e_4_title">NEW ORLEANS JAZZ PARTY</string>
        <string name="e_4_day">FRI</string>
        <string name="e_4_month">Oct</string>
        <string name="e_4_date">2</string>
        <string name="e_4_time">5:30 PM</string>
        <string name="e_4_venue">THE\nBASEMENT</string>
        <string name="e_4_category">Music</string>
        <string name="e_4_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_4_more_link">http://desmoinessocialclub.org/events/first-friday-new-orleans-jazz-party-2015-10-02/</string>
        <string name="e_4_ticket">AT THE DOOR</string>
        <string name="e_4_price">%5</string>
        <string name="e_4_age"> ALL AGES</string>

        <!-- event 5 -->
        <string name="e_5_title">HAIKU DEATHMATCH</string>
        <string name="e_5_day">FRI</string>
        <string name="e_5_month">Oct</string>
        <string name="e_5_date">2</string>
        <string name="e_5_time">7:00 PM</string>
        <string name="e_5_venue">THE\nBASEMENT</string>
        <string name="e_5_category">Social</string>
        <string name="e_5_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_5_more_link">http://desmoinessocialclub.org/events/haiku-deathmatch-7/</string>
        <string name="e_5_ticket"></string>
        <string name="e_5_price">FREE</string>
        <string name="e_5_age">ALL AGES</string>

        <!-- event 6 -->
        <string name="e_6_title">DISCO DANCE PARTY</string>
        <string name="e_6_day">FRI</string>
        <string name="e_6_month">Oct</string>
        <string name="e_6_date">2</string>
        <string name="e_6_time">10:00 PM</string>
        <string name="e_6_venue">THE\nBASEMENT</string>
        <string name="e_6_category">Music</string>
        <string name="e_6_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_6_more_link">http://desmoinessocialclub.org/events/preferred-blend-a-modern-disco-dance-party-2015-10-02/</string>
        <string name="e_6_ticket">FREE</string>
        <string name="e_6_price"></string>
        <string name="e_6_age"></string>

        <!-- event 7 -->
        <string name="e_7_title">COMEDY FESTIVAL</string>
        <string name="e_7_day">SAT</string>
        <string name="e_7_month">Oct</string>
        <string name="e_7_date">3</string>
        <string name="e_7_time">12:00 PM</string>
        <string name="e_7_venue">KUM &amp; GO\nTHEATER</string>
        <string name="e_7_category">Comedy</string>
        <string name="e_7_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_7_more_link">http://desmoinessocialclub.org/events/beast-village-comedy-festival/</string>
        <string name="e_7_ticket">https://midwestix.securemytix.com/event/BeastVillageSaturdayBARONV</string>
        <string name="e_7_price">$12 SINGLE DAY/$25 ALL ACCESS</string>
        <string name="e_7_age">21+</string>

        <!-- event 8 -->
        <string name="e_8_title">DAN TEDESCO &amp; BROTHER TRUCKER</string>
        <string name="e_8_day">SUN</string>
        <string name="e_8_month">Oct</string>
        <string name="e_8_date">4</string>
        <string name="e_8_time">4:00 PM</string>
        <string name="e_8_venue">THE\nBASEMENT</string>
        <string name="e_8_category">Music</string>
        <string name="e_8_description">SOME REALLY GOOD DESCRIPTION</string>
        <string name="e_8_more_link">http://desmoinessocialclub.org/events/dantedescobrothertrucker/</string>
        <string name="e_8_ticket">https://59759.blackbaudhosting.com/59759/DAN-TEDESCO--BROTHER-TRUCKER</string>
        <string name="e_8_price">$10 ADVANCE/$12 AT DOOR</string>
        <string name="e_8_age">ALL AGES</string>

    <!-- SearchScreen Strings -->
    <string name="title_activity_search_screen">Events Filter</string>

    <!-- Faked search results -->
    <string name="title_activity_search_result_screen0929">Filter Results</string>
    <string name="header_0929">Events for 9/29</string>
    <string name="title_activity_search_result_screen0930">Filter Results</string>
    <string name="header_0930">Events for 9/30</string>
    <string name="title_activity_search_result_screen1002">Filter Results</string>
    <string name="header_1002">Events for 10/2</string>
    <string name="title_activity_search_result_screen1003">Filter Results</string>
    <string name="header_1003">Events for 10/3</string>
    <string name="title_activity_search_result_screen1004">Filter Results</string>
    <string name="header_1004">Events for 10/4</string>
    <string name="title_activity_search_result_circus">Filter Results</string>
    <string name="header_circus">Events for Circus</string>
    <string name="title_activity_search_result_music">Filter Results</string>
    <string name="header_music">Events for Music</string>
    <string name="title_activity_search_result_social">Filter Results</string>
    <string name="header_social">Events for Social</string>
    <string name="title_activity_search_result_screen_comedy">Filter Results</string>
    <string name="header_comedy">Events for Comedy</string>

    <string name="testlotsoftext">Obama and Chinese President Xi Jinping promoted new agreements Friday on cybersecurity and climate that they said could yield breakthroughs for their nations.

The leaders promised to help each other investigate and prevent cyberattacks and pledged not to commit cyberespionage or support the theft of trade secrets.

Xi also announced that China will limit carbon emissions starting in 2017, setting in motion a cap-and-trade program similar to one that Obama pushed for, but has been unable to achieve, in the United States.

“This is progress. But I have to insist that our work is not yet done,” Obama said during a news conference in the White House Rose Garden, Xi standing at a lectern beside him.

    Xi acknowledged other commitments of importance to the United States: alliance with the U.S. on a tough global climate agreement this year, vigilance on Iran’s pledged adherence to the deal on its nuclear program, opposition to North Korean aggression and peaceful activity in disputed waters.

Those accommodations were key to the Obama administration’s agenda of incrementally improving relations with China and keeping up collaboration on shared projects.

Still, the results of Xi’s state visit left open the question of whether tension had eased after squabbles over cyberhacks that attacked U.S. government and businesses.

U.S. intelligence officials believe China was behind the theft of millions of security-clearance files as well as recent cyberlooting of health insurance and airline records. For decades, Chinese companies, with the assistance of Beijing, have stolen intellectual property from U.S. firms to replicate American products and engineering. In recent months, Chinese officials have denied responsibility for commercial cyberattacks and called reports of Chinese theft of U.S. data “groundless speculation.”

Xi didn’t apologize for any hacking but rather promised that his government would pursue lawbreakers with vigor. Obama implied that he raised the issue strenuously in private.</string>



</resources>
